--- a/android/app/src/main/res/layout/activity_join.xml
+++ b/android/app/src/main/res/layout/activity_join.xml
@@ -69,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/nanumsquareeb"
+
         android:text="비밀번호"
         android:textColor="#000000"
         android:textSize="12sp"
@@ -86,6 +87,7 @@
         android:background="@drawable/edit_border"
         android:ems="10"
         android:inputType="textPersonName"
+        android:paddingLeft="7dp"
         app:layout_constraintBottom_toTopOf="@+id/editText_pw"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintHorizontal_bias="0.0"
@@ -101,7 +103,8 @@
         android:layout_marginBottom="35dp"
         android:background="@drawable/edit_border"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
+        android:paddingLeft="7dp"
         app:layout_constraintBottom_toTopOf="@+id/editjoin_pwchk"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintHorizontal_bias="0.0"
@@ -117,7 +120,8 @@
         android:layout_marginBottom="35dp"
         android:background="@drawable/edit_border"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
+        android:paddingLeft="7dp"
         app:layout_constraintBottom_toTopOf="@+id/editjoin_name"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintHorizontal_bias="0.0"
@@ -134,6 +138,7 @@
         android:background="@drawable/edit_border"
         android:ems="10"
         android:inputType="textPersonName"
+        android:paddingLeft="7dp"
         app:layout_constraintBottom_toTopOf="@+id/editjoin_email"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintHorizontal_bias="0.0"
@@ -148,6 +153,7 @@
         android:background="@drawable/edit_border"
         android:ems="10"
         android:inputType="textPersonName"
+        android:paddingLeft="7dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -161,6 +167,7 @@
         android:background="@drawable/edit_border"
         android:ems="10"
         android:inputType="textPersonName"
+        android:paddingLeft="7dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
