--- a/android/app/src/main/res/layout/activity_fingerprint.xml
+++ b/android/app/src/main/res/layout/activity_fingerprint.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_bg"
     tools:context=".auth.fingerprint.FingerprintActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
