--- a/android/app/src/main/res/layout/activity_home.xml
+++ b/android/app/src/main/res/layout/activity_home.xml
@@ -99,15 +99,15 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginTop="32dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline19"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarmain"
-        app:srcCompat="@drawable/ddomcha" />
+        app:srcCompat="@drawable/home_account_profile" />
 
     <TextView
         android:id="@+id/textView"
@@ -127,7 +127,6 @@
         android:id="@+id/tvHome_userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
         android:fontFamily="@font/nanumsquareeb"
         android:text="User"
         android:textColor="@color/white"
